--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -1,39 +1,27 @@
-# This workflow will install Python dependencies, run tests and lint with a single version of Python
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+name: CI   # Name of the workflow
 
-name: Python application
-
-on:
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+on: [push, pull_request]   # 👈 When this workflow is triggered
+# It runs automatically every time you push code or open a pull request.
 
 jobs:
-  build:
-
-    runs-on: ubuntu-latest
+  build:                    # A job is a group of steps
+    runs-on: ubuntu-latest  # The virtual machine (OS) GitHub will use
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: "3.10"
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
-      run: |
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest
-      run: |
-        pytest
+      - uses: actions/checkout@v4
+        # ✅ Step 1: Check out your code from GitHub so it can be used in the workflow
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+        # ✅ Step 2: Install Python version 3.11 on the runner (VM)
+
+      - name: Install deps
+        run: pip install -r requirements.txt
+        # ✅ Step 3: Install all Python packages listed in requirements.txt
+
+      - name: Run tests
+        run: python --version
+        # ✅ Step 4: Example test step — here it just prints the Python version
+        # You can replace this with 'pytest' or your test command later.
